building out about page

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAwTq0DBU48m2Q8edUBMz0jdrSW51naSM&libraries=places"></script>
     <script src="https://use.fontawesome.com/70a26c811d.js"></script>
+    <script src="https://unpkg.com/mailgo@0.11.2/dist/mailgo.min.js" defer></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
